# url-shortener

./: .dockerignore  .env  .env-example  Cargo.toml  Dockerfile  api.json  azure-pipelines.yml  bootstrap-server.sh  build-server.sh  build_docker_image.sh  docker-compose.yml  dockerfile  prepare_server.sh  rust.groovy
.cargo/: config.toml
src/: main.rs
src/controllers/: html_response.rs  manual_hello.rs  mod.rs
src/db/: connectdb.rs  mod.rs
src/db/models/: mod.rs  url.rs
src/functions/: generate.rs
src/routes/: greet.rs  health_check.rs  hello.rs  mod.rs  url.rs
src/services/: mod.rs  redirect_route.rs
static/: html.html  index.html
