[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
tokio = { varsion = "1", features = ["macros", "rt-multi-thread"]}
mongodb = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4"
handlebars = {version = "4.3.1", features = ["dir_source"]}