[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
tokio = { varsion = "1", features = ["macros", "rt-multi-thread"]}
mongodb = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4"
random-string = "1.0.0"
env_logger = "0.9.0"
actix-web-middleware-keycloak-auth = "0.4.0"
paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base", "actix-files", "codegen", "cli"] }
keycloak = "19.0.101"
local-ip-address = "0.4.7"
futures = "0.3.23"
