[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4.5"
random-string = "1.0.0"
env_logger = "0.9.0"
actix-web-middleware-keycloak-auth = "0.4.0"
paperclip = { version = "0.7.1", features = ["swagger-ui", "actix4", "actix-base", "actix-files", "codegen", "cli"] }
keycloak = "19.0.101"
local-ip-address = "0.4.7"
futures = "0.3.23"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = [ "bson-chrono-0_4", "sync", "async-std-runtime"]
